--- a/index.html
+++ b/index.html
@@ -5,23 +5,13 @@
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
         <link rel="stylesheet" href="css/main_style.css" />
 
-        <title>dbkats &middot; Yelp</title>
+        <title>dbkats &middot; Particles</title>
     </head>
     <body ng-controller="MainCtrl as main">
         <!-- canvas at the top, spans the whole body -->
         <canvas></canvas>
 
         <div ng-view class="view-animate"></div>
-
-        <div class="link-info">
-            <!--<pre>$location.path() = {{main.$location.path()}}</pre>
-            <pre>$route.current.templateUrl = {{main.$route.current.templateUrl}}</pre>
-            <pre>$route.current.params = {{main.$route.current.params}}</pre>
-            <pre>$routeParams = {{main.$routeParams}}</pre>-->
-        </div>
-        <!--<div id="footer">
-            You can find my Github projects <a href="https://github.com/boompig">here</a>
-        </div>-->
 
         <script src="bower_components/jquery/jquery.min.js"></script>
         <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
