--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
         <script src="bower_components/angular-animate/angular-animate.js"></script>
         <script src="js/app.js"></script>
 
+
         <!-- animation stuff -->
         <script src="js/vector.js"></script>
         <script src="js/utils.js"></script>
-        <script src="js/particles.js"></script>
+
+        <!-- angular animation stuff -->
+        <script src="js/angular_controllers/particles.js"></script>
     </body>
 </html>
